
CHANGE HISTORY 
--------------

not yet  BJH  Release 10.38.0

              pammixinterlace: Add -filter and fir and ffmpeg filters.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pammixinterlace: Add -adaptive.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              Add pamfixtrunc.

              pambackground: recognize mid-row background.

              ppm3d: Add -color option.

              ppm3d: Add -offset option as alternative to offset argument.

              giftopnm: Add -repair option.

              libnetpbm: in the "no such option" error message, say what
              the valid options are.

              libnetpbm: Embellish "bad magic number" error message.

              pamtoxvmini: fix crash.

              libnetpbm: fix buffer overrun with PBM images < 8 columns.

              pamtogif: fail properly if image to wide or high for GIF.

              ppmdraw: fix crash with use of freed storage.  Thanks
              John Walker <kelvin@fourmilab.ch>.

              libnetpbm: fix crash with PAM read as PNM.

              installnetpbm: use 2-argument open() for old Perl.
    
              configure: default to 'none' for Svgalib if it doesn't appear
              to be installed.

06.12.31 BJH  Release 10.37.0

              Add pambackground.  But doesn't find mid-row background yet.

              pnmcrop, pamtopnm: work on multi-image stream.
              Thanks Erik Auerswald <auerswal@unix-ag.uni-kl.de>.

              pnmshear: add -background.  Thanks Erik Auerswald
              <auerswal@unix-ag.uni-kl.de>.

              ppmtogif: replace with pamtogif.  Fix garbage output with
              -interlace.

              pbmtoxbm: add -name option.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoxbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.
              